<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txt_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:text="@string/rules"
        android:textColor="?attr/colorPrimary"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_tool_bar"/>

    <TextView
        android:id="@+id/txt_rules_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:text="@string/rules_desc"

        android:padding="25dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_rules"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:text="@string/back_string"

        android:textSize="17sp"
        android:padding="10dp"
        android:onClick="backClicked"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_rules_summary"
        app:layout_constraintHorizontal_bias="0.1"
        />



</androidx.constraintlayout.widget.ConstraintLayout>