<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoOrMoreActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_tool_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp">

            <TextView
                android:id="@+id/txt_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coins"
                android:textSize="20sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <RadioGroup
                android:id="@+id/rg_num_alikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_balance"
                android:orientation="horizontal">

                <RadioButton
                    android:padding="10dp"
                    android:id="@+id/rb_2_alike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alike_2"/>
                <RadioButton
                    android:padding="10dp"
                    android:id="@+id/rb_3_alike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alike_3"/>
                <RadioButton
                    android:padding="10dp"
                    android:id="@+id/rb_4_alike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alike_4"/>

            </RadioGroup>

            <LinearLayout
                android:id="@+id/layout_wager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_num_alikes">

                <EditText
                    android:inputType="number"
                    android:id="@+id/txt_wager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="Wager"
                    android:textAlignment="center"
                    android:ems="8"
                    android:layout_marginEnd="15dp"/>

                <Button
                    android:id="@+id/btn_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Go"
                    android:layout_marginStart="15dp"
                    android:padding="12dp"
                    android:onClick="goButtonClick"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp">


            <TableLayout
                android:id="@+id/layout_die"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:shrinkColumns="1, 3"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow>

                    <Button
                        android:id="@+id/btn_die_1"
                        android:contentDescription="Die 1"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="70sp"
                        android:text="@string/blank_string"

                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:layout_margin="10dp"
                        android:paddingHorizontal="32dp"
                        />

                    <Button
                        android:id="@+id/btn_die_2"
                        android:contentDescription="Die 2"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="70sp"
                        android:text="@string/blank_string"

                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:layout_margin="10dp"
                        android:paddingHorizontal="32dp"
                        />

                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/btn_die_3"
                        android:contentDescription="Die 3"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="70sp"
                        android:text="@string/blank_string"

                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:layout_margin="10dp"
                        android:paddingHorizontal="32dp"
                        />

                    <Button
                        android:id="@+id/btn_die_4"
                        android:contentDescription="Die 4"
                        android:clickable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="70sp"
                        android:text="@string/blank_string"

                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:layout_margin="10dp"
                        android:paddingHorizontal="32dp"
                        />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_die">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_string"
                    android:layout_marginEnd="30dp"
                    android:onClick="backClicked"/>

                <Button
                    android:id="@+id/btn_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_string"
                    android:layout_marginStart="30dp"
                    android:onClick="infoClicked"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>